--- a/Project.toml
+++ b/Project.toml
@@ -5,18 +5,20 @@ version = "0.1.0"
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 
 [compat]
 DocStringExtensions = "0.9"
+GPUArraysCore = "0.1.4"
 MPI = "0.20"
 Parameters = "0.12"
 julia = "1"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "Random"]
